# supracommit

./: Format.vala  ParseOption.vala  Readme.md  SupraCommit.vala  main.vala  meson.build
completion/: meson.build  supracommit.bash  supracommit.zsh
src/: Error.vala  Format.vala  Git.vala  ParseOption.vala  SupraCommit.vala  Utils.vala  main.vala  meson.build
subprojects/: BrainLib.wrap
